# pr-cache-sim

./: .gitignore  CMakeLists.txt  Makefile-old  README.md  device.dev  makefile  makefile-notworking  memory.mem  micron.mem  moderate.mem  moderate.trc  random.app  random.yaml  realistic.mem  simple.mem  simple.trc  simple.trc.txt  simple0.json  simplified.mem  toy-tex.trc  toy.mem  toy.trc  toy.trc.txt  trace_sp2_rp5_0.trc  trace_sp2_rp5_1.trc  traces.trc  wallet.wal
src/: CMakeLists.txt  application.cpp  application.h  application.hpp  device.cpp  device.h  device.hpp  fileHandler.cpp  fileHandler.h  fileHandler.hpp  globals.h  globals.hpp  main.cpp  module.cpp  module.h  reader.cpp  reader.h  replAlg.cpp  replAlg.h  signalContext.cpp  signalContext.h  signalContext.hpp  storageUnit.cpp  storageUnit.h  traceToken.cpp  traceToken.h  traceToken.hpp  types.hpp  userError.cpp  userError.hpp  wallet.cpp  wallet.h  wallet.hpp
src/algs/: fifoAlg.cpp  fifoAlg.h  fifoAlg.hpp  randomAlg.cpp  randomAlg.h  randomAlg.hpp  replAlg.cpp  replAlg.hpp
src/algs/bitstream/: bitstreamSelector.cpp  bitstreamSelector.hpp  lftFeSelector.cpp  lftFeSelector.hpp
src/algs/cache/: fifoAlg.cpp  fifoAlg.hpp  randomAlg.cpp  randomAlg.hpp  replAlg.cpp  replAlg.hpp
src/algs/rr/: prrScheduling.hpp  rrScheduling.hpp
src/algs/task/: fcfsAlg.cpp  fcfsAlg.hpp  fcfsScheduler.cpp  fcfsScheduler.hpp  schedulingAlg.cpp  schedulingAlg.hpp  taskScheduler.cpp  taskScheduler.hpp
src/components/: icap.cpp  icap.h  icap.hpp  prc.cpp  prc.h  prc.hpp  prrLevelController.cpp  prrLevelController.h  prrLevelController.hpp
src/specs/: application-yaml.cpp  application-yaml.hpp  application.cpp  application.hpp  bitstream.hpp  moduleSpec.hpp  taskSpec.hpp
src/storage/: memoryLevel.cpp  memoryLevel.h  memoryLevel.hpp  module.cpp  module.h  module.hpp  reconfigurableRegions.cpp  reconfigurableRegions.h  reconfigurableRegions.hpp  rrModule.cpp  rrModule.hpp  storageUnit.cpp  storageUnit.h  storageUnit.hpp
src/yaml/: application.cpp  application.hpp
